# fw-automate

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FW_Outreach_Emails.xlsx  FW_Sponsor_Outreach_v2_1.backup.xlsx  FW_Sponsor_Outreach_v2_1.xlsx  README.md  Setup Flat White.command  Start Flat White.command  config.yaml  loi_sponsors_raw.json  pyproject.toml  setup.sh  start.sh  tda_sponsors_raw.json
cron/: com.flatwhite.weekly.plist  flatwhite_weekly.sh
data/: beehiiv_fw_ground_truth.json  beehiiv_fw_ground_truth_ANALYSIS.md
deploy/: gcp_deploy.sh  gcp_setup_remote.sh
flatwhite/: cli.py  db.py  model_router.py
scripts/: backfill_lobby.py  normalise_published_at.py  setup-nitter.sh
tests/: conftest.py  test_asic_insolvency.py  test_assemble_edition.py  test_backfill.py  test_backfill_api.py  test_beehiiv_format.py  test_beehiiv_picks.py  test_benchmark.py  test_big_conversation_api.py  test_big_conversation_bank.py  test_big_conversation_state.py  test_brains_trust_proceed.py  test_brains_trust_research.py  test_classify.py  test_classify_ratelimit.py  test_content_bank.py  test_dashboard_trim.py  test_dates.py  test_editorial_intro.py  test_engagement_update.py  test_google_news_top_au.py  test_ingest.py  test_ingest_resilience.py  test_insert_curated_item.py  test_inside_track.py  test_inside_track_api.py  test_interactions.py  test_lobby.py  test_model_picker.py  test_model_router.py  test_normalise.py  test_otc_cap.py  test_otc_custom_summary.py  test_otc_ingest.py  test_otc_niche_bias.py  test_otc_url_dedup.py  test_pipeline.py  test_ps_picks_feed.py  (+8 more)
(+103 files in other folders)
